--- a/client/src/components/AppBar/AppBar.module.css
+++ b/client/src/components/AppBar/AppBar.module.css
@@ -12,3 +12,12 @@
   margin: 0;
   font-size: 16px;
 }
+.userAvatar {
+  border-radius: 20px;
+  max-width: 200px;
+  max-height: 200px;
+}
+.buttonContainer {
+  display: flex;
+  gap: 8px
+}
