--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.is-hide {
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+
+  width: 0;
+  height: 0;
+}
