--- a/client/src/components/AppBar/AppBar.module.css
+++ b/client/src/components/AppBar/AppBar.module.css
@@ -4,8 +4,7 @@
 }
 
 .section {
-  display: grid;
-  gap: 4px;
+  display: block;
 }
 
 .title {
@@ -14,10 +13,90 @@
 }
 .userAvatar {
   border-radius: 20px;
-  max-width: 200px;
-  max-height: 200px;
+  width: 100px;
+  height: 100px;
 }
 .buttonContainer {
   display: flex;
-  gap: 8px
+  gap: 8px;
+}
+.WrapProfile {
+  display: block;
+  padding: 10px;
+}
+.dataProfile {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 10px;
+}
+.checkContainer {
+  position: relative;
+  width: 120px;
+  margin-bottom: 12px;
+}
+.checkStatus {
+  fill: green;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  padding: 4px;
+}
+.title {
+  font-size: 16px;
+}
+.contactList {
+  display: flex;
+  flex-direction: row;
+  padding: 5px 20px;
+  gap: 10px;
+  align-items: start;
+  margin-top: 10px;
+}
+.imgContact {
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.imgContact img{
+  display: block;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.countNewLetters {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 900;
+  font-style: italic;
+  top: 0;
+  right: 0;
+  width: 8px;
+  height: 8px;
+  border: 4px solid black;
+  color: white;
+  background-color: black;
+  border-radius: 50%;
+  padding: 6px;
+}
+.dataContact {
+  display: flex;
+  flex-direction: column;
+  gap: 4px
+}
+.countCheckOnline {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
