--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,7 +99,7 @@ input#gT:active {
   text-align: center;
 }
 .chatContent {
-  height: calc(100vh * 0.75);
+  height: calc(100vh * 0.7);
   display: flex;
   flex-direction: column;
   gap: 6px;
@@ -149,9 +149,8 @@ input#gT:active {
   align-items: center;
 }
 .inputMessagePosition {
-  width: 300px;
-  position: fixed;
-  bottom: 10px;
+  width: calc(90%);
+  position: relative;
   border-radius: 20px;
   background-color: white;
   display: flex;
@@ -180,4 +179,8 @@ input#gT:active {
 .green {
   fill: green;
   transform: scale(1.1);
+}
+#root {
+  overflow: hidden;
+  padding: 30px;
 }
